--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,9 @@
+@use "./styles/Nav";
+@import "./styles//Variables.scss";
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: $mainFont;
 }
