--- a/src/App.css
+++ b/src/App.css
@@ -26,11 +26,50 @@
   fill: rgb(95, 95, 94);
 }
 
+#main {
+  position: relative;
+}
+
+#Hero {
+  background-color: #111;
+  color: whitesmoke;
+  font-weight: 600;
+  height: 600vh;
+}
+
+#HeroNav {
+  position: sticky;
+  top: 0px;
+  background-color: #111;
+  display: flex;
+  height: 50px;
+  width: 100%;
+  align-items: center;
+  justify-content: space-around;
+  cursor: pointer;
+}
+#HeroNav .alter {
+  color: rgb(98, 98, 98);
+}
+#HeroNav .right {
+  display: flex;
+  gap: 40px;
+  align-items: center;
+}
+#HeroNav .buy {
+  background-color: #0071e3;
+  border-radius: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: system-ui;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 /*# sourceMappingURL=App.css.map */
