--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,10 @@
 @use "./styles/Nav";
-@import "./styles//Variables.scss";
+@use "./styles/Hero.scss";
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: $mainFont;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
