--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
   height: 600vh;
 }
 
-#HeroNav {
+#MainNav {
   position: sticky;
   top: 0px;
   background-color: #111;
@@ -46,17 +46,18 @@
   width: 100%;
   align-items: center;
   justify-content: space-around;
+  color: whitesmoke;
   cursor: pointer;
 }
-#HeroNav .alter {
+#MainNav .alter {
   color: rgb(98, 98, 98);
 }
-#HeroNav .right {
+#MainNav .right {
   display: flex;
   gap: 40px;
   align-items: center;
 }
-#HeroNav .buy {
+#MainNav .buy {
   background-color: #0071e3;
   border-radius: 50px;
   padding-left: 10px;
