--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -13,7 +13,7 @@
       display: flex;
       align-items: center;
       font-weight: 600;
-      color: whitesmoke;
+      color: #f5f5f7;
       cursor: pointer;
       &:hover {
         color: rgb(95, 95, 94);
@@ -21,7 +21,7 @@
     }
   }
   svg {
-    fill: whitesmoke;
+    fill: #f5f5f7;
 
     &:hover {
       fill: rgb(95, 95, 94);
